# googletestCMakeDemo

./: CMakeLists.txt  README.md
my-app/: CMakeLists.txt  myApp.cc
my-app/my-app-test/: CMakeLists.txt  myAppTest.cc
